<resources>
    <string name="app_name">Bangla Jokes</string>
    <string name="button_one">BANGLA</string>
    <string name="button_two">ENGLISH</string>
    <string name="button_three">ABOUT</string>
    <string name="buttonbangla_text1">Button One Text1</string>
    <string name="buttonbangla1_detailstext1">াতীয় শিক্ষাক্রম ও পাঠ্যপুস্তক বোর্ড, যা এনসিটিবি নামে পরিচিত। \r\n প্রাক-প্রাথমিক, প্রাথমিক, মাধ্যমিক ও উচ্চ মাধ্যমিক স্তরের শিক্ষাক্রম উন্নয়ন \r\nও পরিমার্জনের জন্য শীর্ষ প্রতিষ্ঠান এবং যা জাতীয় শিক্ষাক্রম অনুসারে পাঠ্যপুস্তক \r\nও অন্যান্য শিখন উপকরণের উন্নয়ন ও পরিমার্জনের কাজ করে থাকে। এছাড়া এনসিটিবি প্রাক-প্রাথমিক, প্রাথমিক, \r\nমাধ্যমিক, ইবতেদায়ী, দাখিল ও  ভোকেশনাল স্তরের পাঠ্যপুস্তক মুদ্রণ ও বিনামূল্যে পাঠ্যপুস্তক বিতরণের \r\nকাজ সুষ্ঠভাবে সম্পাদন করে থাকে। পাঠ্যপুস্তক মুদ্রণের সংখ্যা অনুসারে এটি বিশ্বের সবচেয়ে বড় প্রকাশনা প্রতিষ্ঠান। অধিকন্তু এটিই শিক্ষা মন্ত্রণালয়ের অধীনস্থ সবচেয়ে বড় স্ব-শাসিত প্রতিষ্ঠান। </string>
    <string name="buttonbangla_text2">Button One Text2</string>
    <string name="buttonbangla2_detailstext2">াতীয় শিক্ষাক্রম ও পাঠ্যপুস্তক বোর্ড, যা এনসিটিবি নামে পরিচিত। \r\n প্রাক-প্রাথমিক, প্রাথমিক, মাধ্যমিক ও উচ্চ মাধ্যমিক স্তরের শিক্ষাক্রম উন্নয়ন \r\nও পরিমার্জনের জন্য শীর্ষ প্রতিষ্ঠান এবং যা জাতীয় শিক্ষাক্রম অনুসারে পাঠ্যপুস্তক \r\nও অন্যান্য শিখন উপকরণের উন্নয়ন ও পরিমার্জনের কাজ করে থাকে। এছাড়া এনসিটিবি প্রাক-প্রাথমিক, প্রাথমিক, \r\nমাধ্যমিক, ইবতেদায়ী, দাখিল ও  ভোকেশনাল স্তরের পাঠ্যপুস্তক মুদ্রণ ও বিনামূল্যে পাঠ্যপুস্তক বিতরণের \r\nকাজ সুষ্ঠভাবে সম্পাদন করে থাকে। পাঠ্যপুস্তক মুদ্রণের সংখ্যা অনুসারে এটি বিশ্বের সবচেয়ে বড় প্রকাশনা প্রতিষ্ঠান। অধিকন্তু এটিই শিক্ষা মন্ত্রণালয়ের অধীনস্থ সবচেয়ে বড় স্ব-শাসিত প্রতিষ্ঠান। </string>
    <string name="buttonbangla_text3">Button One Text3</string>
    <string name="buttonbangla3_detailstext3">াতীয় শিক্ষাক্রম ও পাঠ্যপুস্তক বোর্ড, যা এনসিটিবি নামে পরিচিত। \r\n প্রাক-প্রাথমিক, প্রাথমিক, মাধ্যমিক ও উচ্চ মাধ্যমিক স্তরের শিক্ষাক্রম উন্নয়ন \r\nও পরিমার্জনের জন্য শীর্ষ প্রতিষ্ঠান এবং যা জাতীয় শিক্ষাক্রম অনুসারে পাঠ্যপুস্তক \r\nও অন্যান্য শিখন উপকরণের উন্নয়ন ও পরিমার্জনের কাজ করে থাকে। এছাড়া এনসিটিবি প্রাক-প্রাথমিক, প্রাথমিক, \r\nমাধ্যমিক, ইবতেদায়ী, দাখিল ও  ভোকেশনাল স্তরের পাঠ্যপুস্তক মুদ্রণ ও বিনামূল্যে পাঠ্যপুস্তক বিতরণের \r\nকাজ সুষ্ঠভাবে সম্পাদন করে থাকে। পাঠ্যপুস্তক মুদ্রণের সংখ্যা অনুসারে এটি বিশ্বের সবচেয়ে বড় প্রকাশনা প্রতিষ্ঠান। অধিকন্তু এটিই শিক্ষা মন্ত্রণালয়ের অধীনস্থ সবচেয়ে বড় স্ব-শাসিত প্রতিষ্ঠান। </string>
    <string name="buttonbangla_text4">Button One Text4</string>
    <string name="buttonbangla4_detailstext4">াতীয় শিক্ষাক্রম ও পাঠ্যপুস্তক বোর্ড, যা এনসিটিবি নামে পরিচিত। \r\n প্রাক-প্রাথমিক, প্রাথমিক, মাধ্যমিক ও উচ্চ মাধ্যমিক স্তরের শিক্ষাক্রম উন্নয়ন \r\nও পরিমার্জনের জন্য শীর্ষ প্রতিষ্ঠান এবং যা জাতীয় শিক্ষাক্রম অনুসারে পাঠ্যপুস্তক \r\nও অন্যান্য শিখন উপকরণের উন্নয়ন ও পরিমার্জনের কাজ করে থাকে। এছাড়া এনসিটিবি প্রাক-প্রাথমিক, প্রাথমিক, \r\nমাধ্যমিক, ইবতেদায়ী, দাখিল ও  ভোকেশনাল স্তরের পাঠ্যপুস্তক মুদ্রণ ও বিনামূল্যে পাঠ্যপুস্তক বিতরণের \r\nকাজ সুষ্ঠভাবে সম্পাদন করে থাকে। পাঠ্যপুস্তক মুদ্রণের সংখ্যা অনুসারে এটি বিশ্বের সবচেয়ে বড় প্রকাশনা প্রতিষ্ঠান। অধিকন্তু এটিই শিক্ষা মন্ত্রণালয়ের অধীনস্থ সবচেয়ে বড় স্ব-শাসিত প্রতিষ্ঠান। </string>
    <string name="buttonbangla_text5">Button One Text5</string>
    <string name="buttonbangla5_detailstext5">াতীয় শিক্ষাক্রম ও পাঠ্যপুস্তক বোর্ড, যা এনসিটিবি নামে পরিচিত। \r\n প্রাক-প্রাথমিক, প্রাথমিক, মাধ্যমিক ও উচ্চ মাধ্যমিক স্তরের শিক্ষাক্রম উন্নয়ন \r\nও পরিমার্জনের জন্য শীর্ষ প্রতিষ্ঠান এবং যা জাতীয় শিক্ষাক্রম অনুসারে পাঠ্যপুস্তক \r\nও অন্যান্য শিখন উপকরণের উন্নয়ন ও পরিমার্জনের কাজ করে থাকে। এছাড়া এনসিটিবি প্রাক-প্রাথমিক, প্রাথমিক, \r\nমাধ্যমিক, ইবতেদায়ী, দাখিল ও  ভোকেশনাল স্তরের পাঠ্যপুস্তক মুদ্রণ ও বিনামূল্যে পাঠ্যপুস্তক বিতরণের \r\nকাজ সুষ্ঠভাবে সম্পাদন করে থাকে। পাঠ্যপুস্তক মুদ্রণের সংখ্যা অনুসারে এটি বিশ্বের সবচেয়ে বড় প্রকাশনা প্রতিষ্ঠান। অধিকন্তু এটিই শিক্ষা মন্ত্রণালয়ের অধীনস্থ সবচেয়ে বড় স্ব-শাসিত প্রতিষ্ঠান। </string>
    <string name="buttonbangla_text6">Button One Text6</string>
    <string name="buttonbangla6_detailstext6">াতীয় শিক্ষাক্রম ও পাঠ্যপুস্তক বোর্ড, যা এনসিটিবি নামে পরিচিত। \r\n প্রাক-প্রাথমিক, প্রাথমিক, মাধ্যমিক ও উচ্চ মাধ্যমিক স্তরের শিক্ষাক্রম উন্নয়ন \r\nও পরিমার্জনের জন্য শীর্ষ প্রতিষ্ঠান এবং যা জাতীয় শিক্ষাক্রম অনুসারে পাঠ্যপুস্তক \r\nও অন্যান্য শিখন উপকরণের উন্নয়ন ও পরিমার্জনের কাজ করে থাকে। এছাড়া এনসিটিবি প্রাক-প্রাথমিক, প্রাথমিক, \r\nমাধ্যমিক, ইবতেদায়ী, দাখিল ও  ভোকেশনাল স্তরের পাঠ্যপুস্তক মুদ্রণ ও বিনামূল্যে পাঠ্যপুস্তক বিতরণের \r\nকাজ সুষ্ঠভাবে সম্পাদন করে থাকে। পাঠ্যপুস্তক মুদ্রণের সংখ্যা অনুসারে এটি বিশ্বের সবচেয়ে বড় প্রকাশনা প্রতিষ্ঠান। অধিকন্তু এটিই শিক্ষা মন্ত্রণালয়ের অধীনস্থ সবচেয়ে বড় স্ব-শাসিত প্রতিষ্ঠান। </string>
    <string name="buttonbangla_text7">Button One Text7</string>
    <string name="buttonbangla7_detailstext7">াতীয় শিক্ষাক্রম ও পাঠ্যপুস্তক বোর্ড, যা এনসিটিবি নামে পরিচিত। \r\n প্রাক-প্রাথমিক, প্রাথমিক, মাধ্যমিক ও উচ্চ মাধ্যমিক স্তরের শিক্ষাক্রম উন্নয়ন \r\nও পরিমার্জনের জন্য শীর্ষ প্রতিষ্ঠান এবং যা জাতীয় শিক্ষাক্রম অনুসারে পাঠ্যপুস্তক \r\nও অন্যান্য শিখন উপকরণের উন্নয়ন ও পরিমার্জনের কাজ করে থাকে। এছাড়া এনসিটিবি প্রাক-প্রাথমিক, প্রাথমিক, \r\nমাধ্যমিক, ইবতেদায়ী, দাখিল ও  ভোকেশনাল স্তরের পাঠ্যপুস্তক মুদ্রণ ও বিনামূল্যে পাঠ্যপুস্তক বিতরণের \r\nকাজ সুষ্ঠভাবে সম্পাদন করে থাকে। পাঠ্যপুস্তক মুদ্রণের সংখ্যা অনুসারে এটি বিশ্বের সবচেয়ে বড় প্রকাশনা প্রতিষ্ঠান। অধিকন্তু এটিই শিক্ষা মন্ত্রণালয়ের অধীনস্থ সবচেয়ে বড় স্ব-শাসিত প্রতিষ্ঠান। </string>
    <string name="buttonbangla_text8">Button One Text8</string>
    <string name="buttonbangla8_detailstext8">াতীয় শিক্ষাক্রম ও পাঠ্যপুস্তক বোর্ড, যা এনসিটিবি নামে পরিচিত। \r\n প্রাক-প্রাথমিক, প্রাথমিক, মাধ্যমিক ও উচ্চ মাধ্যমিক স্তরের শিক্ষাক্রম উন্নয়ন \r\nও পরিমার্জনের জন্য শীর্ষ প্রতিষ্ঠান এবং যা জাতীয় শিক্ষাক্রম অনুসারে পাঠ্যপুস্তক \r\nও অন্যান্য শিখন উপকরণের উন্নয়ন ও পরিমার্জনের কাজ করে থাকে। এছাড়া এনসিটিবি প্রাক-প্রাথমিক, প্রাথমিক, \r\nমাধ্যমিক, ইবতেদায়ী, দাখিল ও  ভোকেশনাল স্তরের পাঠ্যপুস্তক মুদ্রণ ও বিনামূল্যে পাঠ্যপুস্তক বিতরণের \r\nকাজ সুষ্ঠভাবে সম্পাদন করে থাকে। পাঠ্যপুস্তক মুদ্রণের সংখ্যা অনুসারে এটি বিশ্বের সবচেয়ে বড় প্রকাশনা প্রতিষ্ঠান। অধিকন্তু এটিই শিক্ষা মন্ত্রণালয়ের অধীনস্থ সবচেয়ে বড় স্ব-শাসিত প্রতিষ্ঠান। </string>
    <string name="buttonbangla_text9">Button One Text9</string>
    <string name="buttonbangla9_detailstext9">াতীয় শিক্ষাক্রম ও পাঠ্যপুস্তক বোর্ড, যা এনসিটিবি নামে পরিচিত। \r\n প্রাক-প্রাথমিক, প্রাথমিক, মাধ্যমিক ও উচ্চ মাধ্যমিক স্তরের শিক্ষাক্রম উন্নয়ন \r\nও পরিমার্জনের জন্য শীর্ষ প্রতিষ্ঠান এবং যা জাতীয় শিক্ষাক্রম অনুসারে পাঠ্যপুস্তক \r\nও অন্যান্য শিখন উপকরণের উন্নয়ন ও পরিমার্জনের কাজ করে থাকে। এছাড়া এনসিটিবি প্রাক-প্রাথমিক, প্রাথমিক, \r\nমাধ্যমিক, ইবতেদায়ী, দাখিল ও  ভোকেশনাল স্তরের পাঠ্যপুস্তক মুদ্রণ ও বিনামূল্যে পাঠ্যপুস্তক বিতরণের \r\nকাজ সুষ্ঠভাবে সম্পাদন করে থাকে। পাঠ্যপুস্তক মুদ্রণের সংখ্যা অনুসারে এটি বিশ্বের সবচেয়ে বড় প্রকাশনা প্রতিষ্ঠান। অধিকন্তু এটিই শিক্ষা মন্ত্রণালয়ের অধীনস্থ সবচেয়ে বড় স্ব-শাসিত প্রতিষ্ঠান। </string>
    <string name="buttonbangla_text10">Button One Text10</string>
    <string name="buttonbangla10_detailstext10">াতীয় শিক্ষাক্রম ও পাঠ্যপুস্তক বোর্ড, যা এনসিটিবি নামে পরিচিত। \r\n প্রাক-প্রাথমিক, প্রাথমিক, মাধ্যমিক ও উচ্চ মাধ্যমিক স্তরের শিক্ষাক্রম উন্নয়ন \r\nও পরিমার্জনের জন্য শীর্ষ প্রতিষ্ঠান এবং যা জাতীয় শিক্ষাক্রম অনুসারে পাঠ্যপুস্তক \r\nও অন্যান্য শিখন উপকরণের উন্নয়ন ও পরিমার্জনের কাজ করে থাকে। এছাড়া এনসিটিবি প্রাক-প্রাথমিক, প্রাথমিক, \r\nমাধ্যমিক, ইবতেদায়ী, দাখিল ও  ভোকেশনাল স্তরের পাঠ্যপুস্তক মুদ্রণ ও বিনামূল্যে পাঠ্যপুস্তক বিতরণের \r\nকাজ সুষ্ঠভাবে সম্পাদন করে থাকে। পাঠ্যপুস্তক মুদ্রণের সংখ্যা অনুসারে এটি বিশ্বের সবচেয়ে বড় প্রকাশনা প্রতিষ্ঠান। অধিকন্তু এটিই শিক্ষা মন্ত্রণালয়ের অধীনস্থ সবচেয়ে বড় স্ব-শাসিত প্রতিষ্ঠান। </string>
    <string name="buttonbangla_text11">Button One Text11</string>
    <string name="buttonbangla11_detailstext11">াতীয় শিক্ষাক্রম ও পাঠ্যপুস্তক বোর্ড, যা এনসিটিবি নামে পরিচিত। \r\n প্রাক-প্রাথমিক, প্রাথমিক, মাধ্যমিক ও উচ্চ মাধ্যমিক স্তরের শিক্ষাক্রম উন্নয়ন \r\nও পরিমার্জনের জন্য শীর্ষ প্রতিষ্ঠান এবং যা জাতীয় শিক্ষাক্রম অনুসারে পাঠ্যপুস্তক \r\nও অন্যান্য শিখন উপকরণের উন্নয়ন ও পরিমার্জনের কাজ করে থাকে। এছাড়া এনসিটিবি প্রাক-প্রাথমিক, প্রাথমিক, \r\nমাধ্যমিক, ইবতেদায়ী, দাখিল ও  ভোকেশনাল স্তরের পাঠ্যপুস্তক মুদ্রণ ও বিনামূল্যে পাঠ্যপুস্তক বিতরণের \r\nকাজ সুষ্ঠভাবে সম্পাদন করে থাকে। পাঠ্যপুস্তক মুদ্রণের সংখ্যা অনুসারে এটি বিশ্বের সবচেয়ে বড় প্রকাশনা প্রতিষ্ঠান। অধিকন্তু এটিই শিক্ষা মন্ত্রণালয়ের অধীনস্থ সবচেয়ে বড় স্ব-শাসিত প্রতিষ্ঠান। </string>
    <string name="buttonbangla_text12">Button One Text12</string>
    <string name="buttonbangla12_detailstext12">াতীয় শিক্ষাক্রম ও পাঠ্যপুস্তক বোর্ড, যা এনসিটিবি নামে পরিচিত। \r\n প্রাক-প্রাথমিক, প্রাথমিক, মাধ্যমিক ও উচ্চ মাধ্যমিক স্তরের শিক্ষাক্রম উন্নয়ন \r\nও পরিমার্জনের জন্য শীর্ষ প্রতিষ্ঠান এবং যা জাতীয় শিক্ষাক্রম অনুসারে পাঠ্যপুস্তক \r\nও অন্যান্য শিখন উপকরণের উন্নয়ন ও পরিমার্জনের কাজ করে থাকে। এছাড়া এনসিটিবি প্রাক-প্রাথমিক, প্রাথমিক, \r\nমাধ্যমিক, ইবতেদায়ী, দাখিল ও  ভোকেশনাল স্তরের পাঠ্যপুস্তক মুদ্রণ ও বিনামূল্যে পাঠ্যপুস্তক বিতরণের \r\nকাজ সুষ্ঠভাবে সম্পাদন করে থাকে। পাঠ্যপুস্তক মুদ্রণের সংখ্যা অনুসারে এটি বিশ্বের সবচেয়ে বড় প্রকাশনা প্রতিষ্ঠান। অধিকন্তু এটিই শিক্ষা মন্ত্রণালয়ের অধীনস্থ সবচেয়ে বড় স্ব-শাসিত প্রতিষ্ঠান। </string>
    <string name="buttonbangla_text13">Button One Text13</string>
    <string name="buttonbangla13_detailstext13">াতীয় শিক্ষাক্রম ও পাঠ্যপুস্তক বোর্ড, যা এনসিটিবি নামে পরিচিত। \r\n প্রাক-প্রাথমিক, প্রাথমিক, মাধ্যমিক ও উচ্চ মাধ্যমিক স্তরের শিক্ষাক্রম উন্নয়ন \r\nও পরিমার্জনের জন্য শীর্ষ প্রতিষ্ঠান এবং যা জাতীয় শিক্ষাক্রম অনুসারে পাঠ্যপুস্তক \r\nও অন্যান্য শিখন উপকরণের উন্নয়ন ও পরিমার্জনের কাজ করে থাকে। এছাড়া এনসিটিবি প্রাক-প্রাথমিক, প্রাথমিক, \r\nমাধ্যমিক, ইবতেদায়ী, দাখিল ও  ভোকেশনাল স্তরের পাঠ্যপুস্তক মুদ্রণ ও বিনামূল্যে পাঠ্যপুস্তক বিতরণের \r\nকাজ সুষ্ঠভাবে সম্পাদন করে থাকে। পাঠ্যপুস্তক মুদ্রণের সংখ্যা অনুসারে এটি বিশ্বের সবচেয়ে বড় প্রকাশনা প্রতিষ্ঠান। অধিকন্তু এটিই শিক্ষা মন্ত্রণালয়ের অধীনস্থ সবচেয়ে বড় স্ব-শাসিত প্রতিষ্ঠান। </string>
    <string name="buttonbangla_text14">Button One Text14</string>
    <string name="buttonbangla14_detailstext14">াতীয় শিক্ষাক্রম ও পাঠ্যপুস্তক বোর্ড, যা এনসিটিবি নামে পরিচিত। \r\n প্রাক-প্রাথমিক, প্রাথমিক, মাধ্যমিক ও উচ্চ মাধ্যমিক স্তরের শিক্ষাক্রম উন্নয়ন \r\nও পরিমার্জনের জন্য শীর্ষ প্রতিষ্ঠান এবং যা জাতীয় শিক্ষাক্রম অনুসারে পাঠ্যপুস্তক \r\nও অন্যান্য শিখন উপকরণের উন্নয়ন ও পরিমার্জনের কাজ করে থাকে। এছাড়া এনসিটিবি প্রাক-প্রাথমিক, প্রাথমিক, \r\nমাধ্যমিক, ইবতেদায়ী, দাখিল ও  ভোকেশনাল স্তরের পাঠ্যপুস্তক মুদ্রণ ও বিনামূল্যে পাঠ্যপুস্তক বিতরণের \r\nকাজ সুষ্ঠভাবে সম্পাদন করে থাকে। পাঠ্যপুস্তক মুদ্রণের সংখ্যা অনুসারে এটি বিশ্বের সবচেয়ে বড় প্রকাশনা প্রতিষ্ঠান। অধিকন্তু এটিই শিক্ষা মন্ত্রণালয়ের অধীনস্থ সবচেয়ে বড় স্ব-শাসিত প্রতিষ্ঠান। </string>
    <string name="text_english">
Where does it come from?\r\n

Contrary to popular belief, Lorem Ipsum is not simply random text. \r\nIt has roots in a piece of classical Latin literature from 45 BC,\r\n making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more\r\n obscure Latin words, consectetur, from a Lorem Ipsum passage, \r\nand going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes\r\n from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" \r\n(The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, \r\nvery popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..",\r\n comes from a line in section 1.10.32.

The standard chunk of Lorem Ipsum used since \r\nthe 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from \r\n"de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied \r\nby English versions from the 1914 translation by H. Rackham.
</string>
</resources>